--- a/style.css
+++ b/style.css
@@ -4,3 +4,89 @@ body {
   margin: 0;
   padding: 0;
 }
+.navbar {
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  display: flex;
+  justify-content: space-between; /* logo on left, links on right */
+  align-items: center;
+  padding: 15px 40px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+.nav-links a {
+  text-decoration: none;
+  color: #333;
+  margin-left: 20px;
+  font-size: 16px;
+}
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: #007bff;
+}
+.nav-links a:hover {
+  color: #007bff;
+}
+
+.card {
+  background-color: white;
+  width: 280px;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+  text-align: center;
+  padding: 20px;
+}
+
+.row{
+   display: flex;
+  justify-content: center; /* centers cards horizontally */
+  gap: 20px; /* space between cards */
+  flex-wrap: wrap;
+  margin: 20px;
+}
+/* Product image */
+.product-image {
+  width: 100%;
+  border-radius: 10px;
+  height: 60%;
+}
+
+/* Title */
+.title {
+  font-size: 22px;
+  font-weight: bold;
+  color: #333;
+  margin-top: 15px;
+}
+
+/* Description text */
+.description {
+  color: #666;
+  font-size: 14px;
+  margin: 10px 0 15px;
+}
+
+/* Price */
+.price {
+  color: #007bff;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+/* Add to Cart button */
+.add-to-cart {
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.add-to-cart:hover {
+  background-color: #218838;
+}
