--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ body {
 }
 .nav-links a {
   text-decoration: none;
-  color: #333;
+  color: black;
   margin-left: 20px;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: bold;
 }
 .logo {
   font-size: 24px;
